Fixed case in video source and removed unecessary z-index in bg vid 1 css

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,6 @@ main {
 }
 
 .background-video:nth-of-type(1) {
-    z-index: -1;
     opacity: 1;
 }
 
